--- a/stats-glow-mind/src/index.html
+++ b/stats-glow-mind/src/index.html
@@ -4,8 +4,9 @@
   <meta charset="utf-8">
   <title>StatsGlowMind</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="medusa.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap">
 </head>
 <body>
   <app-root></app-root>
